--- a/css/studies.css
+++ b/css/studies.css
@@ -1,6 +1,6 @@
 body {
-    background: rgb(125, 198, 205);
-    color: rgb(45, 45, 45);
+     background: rgb(52, 1, 1);
+    color: rgb(145, 145, 145);
     padding: 10px;
     font-family: arial;
 }
@@ -15,16 +15,19 @@ header {
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
-    margin: 0 auto;
-    display: flex;
-    padding: 10px;
+    background: rgb(79, 40, 64);
+                margin: 0 auto;
+                margin-bottom: 20px;
+                display: flex;
+                padding: 10px;
+                border: 5px inset red;
+                border-radius: 50px;
 }
 nav header {
     display: flex;
-    align-items: center;
-    color: rgb(255, 255, 255);
-    flex: 1;
+                align-items: center;
+                color: rgb(200, 0, 0);
+                flex: 1;
 }
 nav ul {
     list-style-image: none;
@@ -40,7 +43,7 @@ nav a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(43, 22, 35);
     display: flex;
     padding:inherit;
 }
